Ant-Java 11+: Add support for a 4th module to be able to add slf4j module
Otherwise running test-ooxml may fail because of a missing class

git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1906220 13f79535-47bb-0310-9956-ffa450edef68