@@ -1345,6 +1345,7 @@ under the License.
         <attribute name="module1" default=""/>
         <attribute name="module2" default=""/>
         <attribute name="module3" default=""/>
+        <attribute name="module4" default=""/>
         <attribute name="outputDir"/>
         <element name="elements" implicit="true"/>
         <sequential>
@@ -1398,6 +1399,7 @@ under the License.
             <local name="use_module1"/>
             <local name="use_module2"/>
             <local name="use_module3"/>
+            <local name="use_module4"/>
             <condition property="use_module1" value="true" unless:true="${isJava8}">
                 <length string="@{module1}" when="greater" length="0"/>
             </condition>
@@ -1406,6 +1408,9 @@ under the License.
             </condition>
             <condition property="use_module3" value="true" unless:true="${isJava8}">
                 <length string="@{module3}" when="greater" length="0"/>
+            </condition>
+            <condition property="use_module4" value="true" unless:true="${isJava8}">
+                <length string="@{module4}" when="greater" length="0"/>
             </condition>
 
             <!-- As of 2018, JaCoCo is managing expectations and stay on Java 5 and therefore don't support junitlauncher -->
@@ -1447,11 +1452,13 @@ under the License.
 
                         <modulepath refid="@{modulepath-ref}" unless:true="${isJava8}"/>
 
+                        <!--jvmarg line="-verbose:module"/-->
                         <jvmarg line="--add-modules org.junit.platform.launcher" unless:true="${isJava8}"/>
                         <jvmarg line="--add-modules org.junit.jupiter.params" unless:true="${isJava8}"/>
                         <jvmarg line="--add-modules org.apache.poi.@{module1}" if:set="use_module1"/>
                         <jvmarg line="--add-modules org.apache.poi.@{module2}" if:set="use_module2"/>
                         <jvmarg line="--add-modules @{module3}" if:set="use_module3"/>
+                        <jvmarg line="--add-modules @{module4}" if:set="use_module4"/>
                     </fork>
 
                     <listener classname="Junit5Progress" />
@@ -1478,7 +1485,8 @@ under the License.
         </path>
 
         <poiunit failureproperty="ooxml.test.failed" heap="768" modulepath-ref="restest.modules"
-            module1="ooxml" module2="scratchpad" module3="org.bouncycastle.pkix" outputDir="${ooxml.reports.test}">
+            module1="ooxml" module2="scratchpad" module3="org.bouncycastle.pkix" module4="org.slf4j"
+            outputDir="${ooxml.reports.test}">
             <zipfileset src="build/dist/maven/poi-ooxml-tests/poi-ooxml-${version.id}-tests.jar">
                 <include name="**/${testpattern}.class"/>
                 <exclude name="**/*$*.class"/>
@@ -1799,7 +1807,8 @@ under the License.
         <attribute name="type"/>
         <sequential>
             <poiunit failureproperty="ooxml.test.failed" heap="768" jacocodest="build/jacoco-@{type}.exec"
-                     modulepath-ref="@{modulepath-ref}" module1="ooxml" module2="scratchpad" module3="org.bouncycastle.pkix" outputDir="${ooxml.reports.test}">
+                     modulepath-ref="@{modulepath-ref}" module1="ooxml" module2="scratchpad" module3="org.bouncycastle.pkix"
+                     module4="org.slf4j" outputDir="${ooxml.reports.test}">
                 <zipfileset src="build/dist/maven/poi-ooxml-tests/poi-ooxml-${version.id}-tests.jar">
                     <include name="**/${testpattern}.class"/>
                     <exclude name="**/*$*.class"/>
